fix: colocando carregamento no meio da tela, verificando truncate e atrelando loading a requisicao

--- a/src/css/components/task-list.less
+++ b/src/css/components/task-list.less
@@ -20,3 +20,8 @@
   margin-left: -5px;
   margin-top: 5px
 }
+
+.header-loading {
+  display: flex;
+  justify-content: center;
+}
